workadventure/back.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  labels:
    app: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: web
          image: "quay.io/ffddorf/workadventure-back:dev"
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  type: ClusterIP
  ports:
    - port: 50051
      targetPort: 50051
