workadventure/front.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: web
          # THIS HAS CONFIG HARDCODED IN THE IMAGE. Swap with your own image!
          image: "quay.io/ffddorf/workadventure-front:dev"
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 8080
      name: http
