workadventure/pusher.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pusher
  labels:
    app: pusher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pusher
  template:
    metadata:
      labels:
        app: pusher
    spec:
      containers:
        - name: web
          image: "quay.io/ffddorf/workadventure-pusher:dev"
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pusher
spec:
  type: ClusterIP
  selector:
    app: pusher
  ports:
    - port: 80
      targetPort: 8080
      name: http
