workadventure/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: workadventure
spec:
  rules:
    - http:
        paths:
          - path: "/pusher"
            backend:
              service:
                name: pusher
                port:
                  name: http
            pathType: Prefix
          - path: "/"
            backend:
              service:
                name: front
                port:
                  name: http
            pathType: Prefix
